// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cat renders unchanged 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center flex-col min-h-screen gap-8 bg-primary"
  >
    <h1
      class="text-4xl font-bold"
    >
      Random Cat
    </h1>
    <p>
      Loading...
    </p>
    <button
      class="border border-gray-400 px-2 py-1 rounded-lg hover:bg-white"
    >
      Get random cat
    </button>
  </div>
</DocumentFragment>
`;

exports[`Cat renders unchanged 2`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center flex-col min-h-screen gap-8 bg-primary"
  >
    <h1
      class="text-4xl font-bold"
    >
      Random Cat
    </h1>
    <img
      alt="cat"
      class="max-w-[80%] max-h-[60vh]"
      src="file1.jpg"
    />
    <button
      class="border border-gray-400 px-2 py-1 rounded-lg hover:bg-white"
    >
      Get random cat
    </button>
  </div>
</DocumentFragment>
`;
